--- a/style.css
+++ b/style.css
@@ -197,13 +197,13 @@ section{
 }
 
 .appear_left{
-  animation: appear_left 4s ease-in-out;
+  animation: appear_left 3s ease-in-out;
 }
 
 @keyframes appear_left{
   0%{
     opacity: 0;
-    transform: translateX(-75rem);
+    transform: translateX(-50rem);
   }
   60%{
     opacity: 1;
@@ -216,7 +216,7 @@ section{
 }
 
 .appear_right{
-  animation: appear_right 4s ease-in-out;
+  animation: appear_right 3s ease-in-out;
 }
 
 @keyframes appear_right{
@@ -588,7 +588,7 @@ section{
 .side_bar-social_media:hover{
   color: var(--main-color);
   font-size: 1em;
-  transform: scale(1.2);
+  transform: scale(1.15) translateY(-0.15rem);
 }
 
 /* Añadir esto en otro momento o resolución si eso */
@@ -655,7 +655,10 @@ section{
 .s1-text_titleName{text-decoration: none; font-family:'Josefin Sans', sans-serif;}
 .s1-text_titleName:link{text-decoration: none; font-family:'Josefin Sans', sans-serif;}
 .s1-text_titleName:visited{text-decoration: none; font-family:'Josefin Sans', sans-serif;}
-.s1-text_titleName:hover{font-family:'Josefin Sans', sans-serif;}
+.s1-text_titleName:hover{
+  font-family:'Josefin Sans', sans-serif;
+  transform: scale(1.05) translateY(-0.5rem);
+}
 
 .s1-text_titleName span{
   font-family:'Josefin Sans', sans-serif;
@@ -1059,13 +1062,16 @@ section{
 
 .s4{
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 7.5rem 7.5rem 7.5rem;
   font-size: 1rem;
   background-color: black;
 }
 
-.s4-div_Tokenomics{
+.s4-div_Tokenomics-title{
   display: flex;
+  align-items: center;
   justify-content: space-around;
   width: 100%;
 }
@@ -1087,61 +1093,96 @@ text-shadow:
   0 0 4rem hsl(120, 100%, 30%);
 }
 
-#s4-div_description{
+.s4-div_Tokenomics{
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
   flex-direction: row;
   padding: 3em 0 0 0;
 }
 
 #s4-div_info_left{
   display: flex;
+  min-width: 30%;
   flex-direction: column;
-  justify-content: space-around;
 }
 
 #s4-div_info_right{
+  min-width: 40%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .s4-info_item{
   display: flex;
   flex-direction: row;
+  width: 100%;
 }
 
 .s4-info_name{
-  margin-right: 1em;
-  font-size: 1.3em;
+  width: 42.5%;
+  text-align: center;
+  font-size: 1.3rem;
   color: white;
+  border-right: 0.1rem solid;
+  border-color: white;
 }
 
 .s4-info_number{
-  font-size: 1.4em;
+  width: 57.5%;
+  font-size: 1.4rem;
   color: hsl(120, 98%, 48%);
-  font-weight: bold;
-}
-
-.s4-info_fee_item{
-  
+  font-weight: 600;
+  text-align: center;
 }
 
 .s4-info_fee_name{
-  font-size: 1.3em;
+  padding: 0 0 1rem 0;
+  font-size: 3rem;
   color: white;
+  font-weight: 100;
+  letter-spacing: 0.025rem;
+  text-shadow:
+    0 0 0.15rem hsl(0, 0%, 90%), 
+    0 0 0.25rem hsl(120, 98%, 70%), 
+    0 0 0.5rem hsl(120, 98%, 60%),
+    0 0 0.75rem hsl(120, 98%, 50%),
+    0 0 1.25rem hsl(120, 98%, 40%),
+    0 0 1.5rem hsl(120, 100%, 30%);
+}
+
+.s4-info_fee_text{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .s4-info_fee_number{
-  text-indent: 2em;
+  padding-left: 2em;
   font-size: 1.4em;
   display: flex;
   flex-direction: row;
   color: white;
 }
 
-.s4-info_fee_number p {
-  color: hsl(120, 98%, 48%);
+#s4-info_fee_percentage{
+  width: 15%;
+  font-size: 1.4rem;
   font-weight: bold;
-  margin-right: 0.7em;
+  text-align: center;
+  border-right: 0.1rem solid;
+  border-color: white;
+  color: hsl(120, 98%, 48%);
+}
+
+#s4-info_fee_percentage_text{
+  width: 85%;
+  font-size: 1.3rem;
+  color: white;
+  text-align: center;
 }
 
 
@@ -1178,22 +1219,57 @@ text-shadow:
 }
 
 #s5-div_content{
-  flex-direction: row;
   padding: 5em 0 0 0;
 }
 
 .s5-team_item{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: inline-block;
   align-items: center;
-  margin: 0 4em;
+  margin: 0 1em;
+  width: 15%;
+  height: 15%;
+  border-radius: 10%;
   box-shadow: 0 0 0.05rem hsl(0, 0%, 90%), 
   0 0 0.15rem hsl(51, 98%, 70%), 
   0 0 0.25rem hsl(51, 98%, 60%),
   0 0 0.5rem hsl(51, 98%, 50%),
   0 0 0.75rem hsl(51, 98%, 40%),
   0 0 1rem hsl(51, 100%, 30%);
+}
+
+.s5_item_animation_1{
+  animation: s5_item_animation 2s ease-out;
+}
+.s5_item_animation_2{
+  animation: s5_item_animation 3s ease-out;
+}
+.s5_item_animation_3{
+  animation: s5_item_animation 4s ease-out;
+}
+.s5_item_animation_4{
+  animation: s5_item_animation 5s ease-out;
+}
+.s5_item_animation_5{
+  animation: s5_item_animation 6s ease-out;
+}
+
+@keyframes s5_item_animation{
+  0%{
+    opacity: 0;
+    transform: translateX(80rem);
+  }
+  60%{
+    opacity: 1;
+    transform: translateX(-2em);
+  }
+  80%{
+    opacity: 1;
+    transform: translateX(0.5em);
+  }
+  100%{
+    opacity: 1;
+    transform: translateX(0em);
+  }
 }
 
 .s5-team_img{
@@ -1205,6 +1281,7 @@ text-shadow:
 }
 
 .s5-img{
+  border-radius: 10%;
   width: 100%;
   height: 100%;
 }
@@ -1215,7 +1292,7 @@ text-shadow:
   align-items: center;  
   text-align: center;
   color: white;
-  padding: 0.4em 0;
+  padding: 0.2em 0;
 }
 
 .s5-team_socials{
@@ -1240,113 +1317,88 @@ text-shadow:
 /* Footer ----------------------------------------------------------*/
 
 footer{
-  width: 100vw;
+  width: 100%;
   height: min-content;
   display: flex;  
   flex-direction: column;
-  background-color: black;
-  padding: 2rem 0;
-  color: hsl(270, 98%, 48%);
+  padding: 2rem 2rem;
+  background: hsl(0, 0%, 2.5%);
+  color: white;
   box-shadow:
-    inset 0 0 0.625rem currentColor,
-    inset 0 0 1.25rem currentColor,
+    inset 0 0 0.1rem currentColor,
+    inset 0 0 0.2rem currentColor,
     0 0 0.1rem currentColor,
-    0 0 0.4rem currentColor,
-    0 0 0.6rem currentColor;
+    0 0 0.2rem currentColor,
+    0 0 0.3rem currentColor,
+    0 0 0.4rem currentColor;
 }
 
 .foot-div{
+  width: 100%;
+  height: 33%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   text-align: center;
   color: white;
-  padding: 1rem 0;
+  padding: 1rem 0 2rem 0;
 }
 
 .foot-info_socials{
+  width: 25%;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  width: 10%;
-  -webkit-box-reflect: below -1.05rem linear-gradient(transparent 12%, rgba(0, 0, 0, 0.007) 20%, rgba(0, 0, 0, 0.05) 70%);
+  -webkit-box-reflect: below -35% linear-gradient(transparent 12%, rgba(0, 0, 0, 0.007) 20%, rgba(0, 0, 0, 0.05) 70%);
 }
 
 .foot-info_socials_img{
   height: 100%;
   width: 25%;
   padding: 2.5%;
+  transition: 0.5s;
 }
 
 .foot-info_socials_img img{
-  width: 100%;
-  height: 100%;
+  width: 3rem;
+  height: 3rem;
 }
 
-.foot-developedby_link:hover{
-  color: rgb(81, 81, 81);
-  height: 100%;
+.foot-info_socials_img{text-decoration: none;}
+.foot-info_socials_img:link{text-decoration: none; color: black;}
+.foot-info_socials_img:visited{text-decoration: none; color: black;}
+.foot-info_socials_img:hover{
+  transform: scale(1.1) translateY(-0.3rem);
 }
 
-.foot-developedby_link:link{
-  text-decoration: none;
-  color: var(---main-color);
+#foot-copyright{
+  padding: 1rem 0 1.5rem 0;
+}
+
+#foot-developedby{
+  padding: 0 0 0.75rem 0;
 }
 
 .foot-developedby_link{
   text-decoration: none;
+  margin: 0 1rem;
+  transition: 0.5s;
+}
+
+.foot-developedby_link:link{text-decoration: none; color: rgb(81, 81, 81);}
+.foot-developedby_link:visited{text-decoration: none; color: rgb(81, 81, 81);}
+.foot-developedby_link:hover{
+  color: hsl(320, 98%, 48%);
+  transform: scale(1.1) translateY(-0.1rem);
 }
 
 /* ------------------------------------------ */
 
-.page{
-  height: 100vh;
-  width: 100vw;
-  background: black;
-}
 
-.neon{
-  font-family: 'Quicksand', sans-serif;
-  position: relative;
-  top: 2.5em;
-  left: 2.5em;
-  transform: translate(-50%, -50%);
-  margin: 0;
-  padding: 0 20px;
-  font-size: 6em;
-  color: white;
-  text-shadow: 0 0 20px #ff005b;
 
-}
 
-.neon::after{
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0 20px;
-  z-index: -1;
-  color: #ff005b;
-  filter: blur(15px);
-  
-}
-
-.neon::before{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #fe3a80;
-  z-index: -2;
-  opacity: .5;
-  filter: blur(40px);
-}
-
-/* ------------------------------------------ */
 
 
 
