--- a/style.css
+++ b/style.css
@@ -234,6 +234,22 @@ section{
   }
 }
 
+.s1-opacity_appear{
+  animation: s1-opacity_appear_animation 3s ease-in-out;
+  animation-delay: 4s;
+}
+
+@keyframes s1-opacity_appear_animation{
+  0%
+  {
+    opacity: 0;
+  }
+  100%
+  {
+    opacity: 1;
+  }
+}
+
 /* START ---------------------------------------------------------------- */
 
 .ml4-div{
@@ -251,18 +267,20 @@ section{
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
   z-index: 100000000;
-  font-size: 10em;
-  font-weight: 200;
+  transform: translate(-50%, -50%);
+  font-family:'Josefin Sans', sans-serif;
+  font-size: 7rem;
+  font-weight: 100;
   letter-spacing: 0.05em;
   width: 100%;
   text-align: center;
-  -webkit-box-reflect: below 0.001em linear-gradient(transparent, hsla(287, 0%, 0%, 0.267));
+  -webkit-box-reflect: below 0.001em linear-gradient(transparent, hsla(275, 0%, 0%, 0.267));
   line-height: 0.55em;
   outline: none;
+  transition: 1s;
   color: #fff;
-  text-shadow: 0 0 0.625rem hsl(270, 98%, 48%), 
+  text-shadow: 0 0 0.625rem hsl(287, 98%, 48%), 
     0 0 1.25rem hsl(287, 98%, 48%),
     0 0 2.5rem hsl(287, 98%, 48%),
     0 0 5rem hsl(287, 98%, 48%),
@@ -274,10 +292,6 @@ section{
   font-family:'Josefin Sans', sans-serif;
   margin: auto;
   z-index: 100000000;
-}
-
-.ml4 .letters-3{
-  font-weight: 100;
 }
 
 /* SCROLLBAR -------------------------------------------------------------*/
@@ -606,9 +620,9 @@ section{
 /* Section 1: Home ----------------------------------------------------------*/
 
 .s1 {
-  /* position: absolute;
+  position: absolute;
   top: 0;
-  left: 0; */
+  left: 0;
   height: 100vh;
   width: 100vw;
   padding: 0;
@@ -666,17 +680,17 @@ section{
 
 .s1_blink{
   animation: animate 10s linear infinite;
-  animation-delay: 0s;
+  animation-delay: 6s;
 }
 
 #s1_blink_1{
-  animation-delay: 1s;
+  animation-delay: 7s;
 }
 #s1_blink_3{
-  animation-delay: 5s;
+  animation-delay: 11s;
 }
 #s1_blink_4{
-  animation-delay: 2s;
+  animation-delay: 8s;
 }
 
 @keyframes animate{
@@ -1189,20 +1203,23 @@ text-shadow:
 /* Section 5: Dev Team ----------------------------------------------------------*/
 
 .s5{
+  display: flex;
   flex-direction: column;
-  padding: 6.5rem 5rem;
+  padding: 7.5rem 3.5rem;
   font-size: 1rem;
   margin: 0;
   background-color: black;
 }
 
 .s5-div_team{
-  display: flex;
-  justify-content: space-around;
   width: 100%;
 }
 
 #s5-div_title{
+  display: flex;
+  justify-content: space-around;
+  height: 30%;
+  padding: 0 0 5rem 0;
   font-size: 6.5rem;
   line-height: 0.85em;
   outline: none;
@@ -1219,19 +1236,24 @@ text-shadow:
 }
 
 #s5-div_content{
-  padding: 5em 0 0 0;
+  display: flex;
+  height: 70%;
+  min-height: 17rem;
 }
 
 .s5-team_item{
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  margin: 0 1em;
-  width: 15%;
-  height: 15%;
-  border-radius: 10%;
-  box-shadow: 0 0 0.05rem hsl(0, 0%, 90%), 
-  0 0 0.15rem hsl(51, 98%, 70%), 
-  0 0 0.25rem hsl(51, 98%, 60%),
+  justify-content: space-between;
+  width: 20%;
+  height: 100%;
+  margin: 0 1rem;
+  border-radius: 1rem;
+  background: hsl(0, 0%, 10%);
+  box-shadow: 0 0 0.25rem hsl(0, 0%, 90%),
+  0 0 0.10rem hsl(51, 98%, 70%),
+  0 0 0.15rem hsl(51, 98%, 60%),
   0 0 0.5rem hsl(51, 98%, 50%),
   0 0 0.75rem hsl(51, 98%, 40%),
   0 0 1rem hsl(51, 100%, 30%);
@@ -1274,44 +1296,67 @@ text-shadow:
 
 .s5-team_img{
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
 }
 
 .s5-img{
-  border-radius: 10%;
+  border-radius: 1rem;
   width: 100%;
-  height: 100%;
+  height: auto;
+}
+
+#s5-maui_img{
+  background: #000;
+  border-radius: 1rem;
 }
 
 .s5-team_description{
   display: flex;
+  width: 100%;
+  align-items: center;
   justify-content: center;
-  align-items: center;  
   text-align: center;
+  font-size: 1.15rem;
   color: white;
-  padding: 0.2em 0;
+  padding: 0 0.2rem 1.5em;
+}
+
+.s5-team_description-Name{
+  font-size: 1.5rem;
+  padding: 1em 0.4em 0.5rem;
 }
 
 .s5-team_socials{
   display: flex;
-  justify-content: center;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 70%;
+  max-height: 5rem;
+  padding: 0 0rem 1.5rem;
 }
 
 .s5-team_socials_img{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 15%;
-  padding: 0.4em 0.2em;
+  max-width: 2.25rem;
+  max-height: 2.25rem;
+  transition: 0.5s;
 }
 
 .s5-team_socials_img img{
   width: 100%;
-  height: 100%;
+  height: auto;
+}
+
+.s5-team_socials_img{text-decoration: none;}
+.s5-team_socials_img:link{text-decoration: none;}
+.s5-team_socials_img:visited{text-decoration: none;}
+.s5-team_socials_img:hover{
+  transform: scale(1.2) translateY(-0.5rem);
 }
 
 /* Footer ----------------------------------------------------------*/
@@ -1420,552 +1465,7 @@ footer{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*
-
-#logo{
-  transform: scale(0.2);
-}
-
-.logo_link{
-  max-height: 4em;
-  max-width: 15%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: 0.5s;
-}
-
-.logo_link:hover{transform: scale(1.1);}
-
-.logo{
-  top: 0;
-  transform: scale(0.6);
-}
-
-.s1 {
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: black;
-  color: white;
-  z-index: 50;
-}
-
-.s1 video{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-
-.overlay{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  opacity: 0.1;
-  mix-blend-mode: overlay;
-}
-
-.s1_text{
-  position: absolute;
-  z-index: 100;
-  top: 70%;
-  left: 20%;
-  transform: translate(-20%, -70%);
-  width: 60%;
-}
-
-.s1_text a h1{
-  font-size: 7.5em;
-  font-weight: 800;
-  line-height: 1.4em;
-  letter-spacing: 0.075em;
-  font-family: ; 
-  -webkit-text-stroke: 1px black;
-  text-shadow:
-      3px 3px 0 #000,
-    -1px -1px 0 #000,  
-     1px -1px 0 #000,
-     -1px 1px 0 #000,
-      1px 1px 0 #000;
-}
-
-.s1_text a{text-decoration: none;}
-.s1_text a:link{text-decoration: none; color: white;}
-.s1_text a:visited{text-decoration: none; color: white;}
-.s1_text a h1:hover{
-  color:var(--main-color);
-  height: 100%;
-  width: 8em;
-  transform: scale(1.1);
-  border-color: var(--main-color);
-}
-
-.s1_text p{
-  font-size: 2em;
-  line-height: 1.75em;
-  text-anchor: end;
-}
-
-.s1_buttons a{
-  font-size: 3em;
-  font-weight: 600;
-  padding: 1em;
-  color: white;
-  display: flex;
-  min-width: fit-content;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-}
-
-.s1_buttons a{text-decoration: none;}
-.s1_buttons a:link{text-decoration: none; color: white;}
-.s1_buttons a:visited{text-decoration: none; color: white;}
-.s1_buttons a:hover{
-  color:var(--main-color);
-  height: 100%;
-  width: fit-content;
-  transform: scale(1);
-  border-color: var(--main-color);
-}
-
-.s1_buttons{
-  position: absolute;
-  z-index: 100;
-  display: flex;
-  min-width: 5em;
-  align-items: center;
-  justify-content: center;
-  top: 90%;
-  left: 10%;
-  transform: translate(-10%, -90%);
-  font-size: 0.9em;
-  font-weight: 600;
-}
-
-.buy_button{
-  color: var(--main-color);
-  display: flex;
-  min-width: 8em;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-  border: white;
-  border-style: solid;
-  border-radius: 0.8em;
-}
-
-#pancake{
-  transform: scale(0.40);
-}
-#twitter{
-  transform: scale(0.40);
-}
-#poocoin{
-  transform: scale(0.40);
-}
-#telegram{
-  transform: scale(0.40);
-}
-
-.social-media{
-  position: absolute;
-  bottom: 15%;
-  transform: translate(32.5%, 0%);
-  right: 0;
-  z-index: 10;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-.social-media li{
-  list-style: none;
-  height: 9em;
-}
-
-.social-media li a{
-  display: inline-block;
-  transform: scale(1);
-  transition: 0.5s;
-}
-
-.social-link:hover{
-  transform: scale(1.25) translateX(-0.5em);
-}
-
-.expand{
-  letter-spacing: 0.1em;
-  font-size: 1.1em;
-}
-
-
-.s3_div{
-  position: absolute;
-  background-color:  rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(7.5px);
-  z-index: 1000;
-  border-radius: 2em;
-  padding: 3em 3em 2em 3em;
-  width: 35em;
-  height: 40em;
-  text-align: center;
-}
-
-.s3_q2{
-  top: 15%;
-  left: 25%;
-  transform: translate(-25%, -15%);
-}
-
-.s3_q3{
-  top: 85%;
-  left: 75%;
-  transform: translate(-75%, -85%);
-}
-
-.s3_div h2{
-  font-size: 4em;
-  line-height: 1.75em;
-  color: var(--main-color);
-  -webkit-text-stroke: 1px black;
-  text-shadow:
-      3px 3px 0 #000,
-      -1px -1px 0 #000,  
-      1px -1px 0 #000,
-      -1px 1px 0 #000,
-      1px 1px 0 #000;
-}
-
-.roadmap_text{
-  font-size: 2em;
-  font: 1000;
-  line-height: 1.5em;
-}
-
-.s3_div li{
-  list-style: none;
-}
-
-
-
-
-.containers2{
-  position: absolute;
-  top: 33%;
-  left: 10%;
-  width: 100%;
-  height: 100%;
-  transform: translate(-10%, -30%);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.subcontainers2 {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 0 7em;
-}
-
-.img{
-  width: cover;
-  height: cover;
-}
-
-.text_cd, .text_lp, .text_sr {
-  font-size: 2em;
-  padding: 0px 2em;
-  margin: 2em 0;
-}
-
-.description{
-  padding-right: 7em;
-}
-
-.description h2 {
-  color: var(--main-color); 
-}
-
-.description p {
-  color: black; 
-}
-
-.text_cp, .text_hodl, .text_sup, .text_mc {
-  font-size: 2em;
-  padding: 0px 2em;
-  text-align: center;
-  border-radius: 50px;
-  margin: 0 2em;
-  box-shadow: 5px 10px 12px rgba(0, 0, 0, 0.2), 0px 0px 0px rgba(0, 0, 0, 0.2);
-}
-
-.subcontainers2 h3{
-  color: var(--main-color);
-  font-size: 1.5em;
-  -webkit-text-stroke: 1px black;
-  text-shadow:
-      3px 3px 0 #000,
-    -1px -1px 0 #000,  
-     1px -1px 0 #000,
-     -1px 1px 0 #000,
-      1px 1px 0 #000;
-}
-
-.subcontainers2 h4{
-  color: black;
-}
-
-.none {
-  display: none;
-}
-
-.s3 video{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-
-.s4 .img {
-  z-index: -50; 
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0.8;
-}
-
-.containers4{
-  position: absolute;
-  top: 33%;
-  left: 10%;
-  width: 100vw;
-  height: 100vh;
-  transform: translate(-10%, -30%);
-  justify-content: space-evenly;
-}
-
-.subcontainers4 {
-  position: absolute;
-  top: 82.5%;
-  transform: translate(0%, -82.5%);
-  display: flex;
-  height: 30%;
-  width: 95%;
-  margin-left: 2.5%;
-  margin-right: 2.5%;
-  padding: 2% 5%;
-  align-items: center;
-  background-color: rgba(81, 81, 81, 0.65);
-  backdrop-filter: blur(6px);
-}
-
-.subsubcontainers4 {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  font-size: 2em;
-  width: 60%;
-  height: 100%;
-  justify-content: space-between;
-}
-
-.subsubcontainers4 h2 {
-  color: var(--main-color);
-  font-size: 2em;
-  -webkit-text-stroke: 1px black;
-  text-shadow:
-      3px 3px 0 #000,
-    -1px -1px 0 #000,  
-     1px -1px 0 #000,
-     -1px 1px 0 #000,
-      1px 1px 0 #000;
-}
-
-
-.subsubcontainers4 div {
-  display: flex;
-  width: 100%;
-  padding: 0;
-  margin: 10px 0;
-  height: 20%;
-}
-
-.subsubcontainers4 div .img_div {
-  width: 6%;
-  margin: 0;
-  padding: 0;
-}
-
-.subsubcontainers4 div .img_div img {
-  width: 50px;
-  height: 50px;
-  margin: 0;
-  padding: 0;
-}
-
-.subsubcontainers4 h3 {
-  color: white;
-  text-indent:0.5em;
-  width: 94%;
-  font-size: 1.2em;
-}
-
-.social-medias4{
-  z-index: 10;
-  display: flex;
-  flex-direction: row;
-  width: 30%;
-}
-
-.social-medias4 a {
-  z-index: 10;
-  width: 25%;
-}
-
-#pancakes4{
-  transform: scale(0.40);
-}
-#twitters4{
-  transform: scale(0.40);
-}
-#poocoins4{
-  transform: scale(0.40);
-}
-#telegrams4{
-  transform: scale(0.40);
-}
-#inv_link_tele{
-  display: none;
-  background-color: #29a5d8;
-}
-
-.subsubcontainers4 a{
-  font-size: 1em;
-  font-weight: 600;
-  padding: 0.5em;
-  color: white;
-  display: flex;
-  min-width: fit-content;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-}
-
-.subsubcontainers4 a{text-decoration: none;}
-.subsubcontainers4 a:link{text-decoration: none; color: white;}
-.subsubcontainers4 a:visited{text-decoration: none; color: white;}
-.subsubcontainers4 a:hover{
-  color:white;
-  width: fit-content;
-  transform: scale(1.2);
-}
-
-.link_telegram{
-  display: flex;
-  min-width: 8em;
-  align-items: center;
-  justify-content: center;
-  transition: 0.3s;
-  border-radius: 0.75em;
-}
-
-.social-links4:hover{
-  transform: scale(1.25) translateX(-0.5em);
-}
-
-
-.s2 {
-  width: 100%;
-  min-height: rgb(0, 0, 0);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: linear-gradient(to bottom, rgb(187, 187, 187), white 20%);
-  color: rgb(255, 255, 255);
-  z-index: 10;
-}
-
-.s2 .text{
-  position: absolute;
-  width: 50%;
-  top: 30%;
-  left: 10%;
-  transform: translate(-10%, -30%);
-}
-
-
-.s2 h1{
-  font-size: 5em;
-  font-weight: 800;
-  line-height: 2.25em;
-}
-
-.footer {
-  position: absolute;
-  bottom: 3%;
-  background-color: #111;
-  height: auto;
-  width: 95%;
-  margin-left: 2.5%;
-  margin-right: 2.5%;
-  padding: 0.75%;
-  color: white;
-  align-items: center;
-  justify-content: space-evenly;
-  display: flex;
-  flex-direction: column;
-}
-
-.text_footer{
-  font-size: 1.2em;
-  font-weight: 300;
-  color: white;
-}
-
-.footer_link{text-decoration: none;}
-.footer_link:link{text-decoration: none; color: var(---main-color);}
-.footer_link:visited{text-decoration: none; color: #515151;}
-.footer_link:hover{color: rgb(81, 81, 81); height: 100%; font-size: 105%;}
-
-
 
 @media(max-width: 2440px){
   .s3_q2{
