--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html{
 .theme_color{color: var(--main-color);}
 
 section{
-  width: 100vw;
+  width: 100%;
   height: min-content;
   display: flex;
   margin: 0 0 1rem 0;
@@ -671,7 +671,6 @@ section{
 .s1-text_titleName:visited{text-decoration: none; font-family:'Josefin Sans', sans-serif;}
 .s1-text_titleName:hover{
   font-family:'Josefin Sans', sans-serif;
-  transform: scale(1.05) translateY(-0.5rem);
 }
 
 .s1-text_titleName span{
@@ -824,8 +823,10 @@ section{
 }
 
 #s2-div_data{
+  padding: 0 2em;
   flex-direction: row;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .s2-stats{
@@ -1194,6 +1195,7 @@ text-shadow:
 
 #s4-info_fee_percentage_text{
   width: 85%;
+  padding: 0 0 0 1rem;
   font-size: 1.3rem;
   color: white;
   text-align: center;
@@ -1205,6 +1207,8 @@ text-shadow:
 .s5{
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 7.5rem 3.5rem;
   font-size: 1rem;
   margin: 0;
@@ -1237,8 +1241,11 @@ text-shadow:
 
 #s5-div_content{
   display: flex;
+  justify-content: center;
   height: 70%;
+  width: 75%;
   min-height: 17rem;
+  flex-wrap: wrap;
 }
 
 .s5-team_item{
@@ -1246,9 +1253,10 @@ text-shadow:
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 20%;
+  width: 15%;
+  min-width: 15rem;
   height: 100%;
-  margin: 0 1rem;
+  margin: 1.5rem 1.5rem;
   border-radius: 1rem;
   background: hsl(0, 0%, 10%);
   box-shadow: 0 0 0.25rem hsl(0, 0%, 90%),
@@ -1319,13 +1327,13 @@ text-shadow:
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 1.15rem;
+  font-size: 1.05rem;
   color: white;
   padding: 0 0.2rem 1.5em;
 }
 
 .s5-team_description-Name{
-  font-size: 1.5rem;
+  font-size: 1.15rem;
   padding: 1em 0.4em 0.5rem;
 }
 
@@ -1342,8 +1350,8 @@ text-shadow:
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 2.25rem;
-  max-height: 2.25rem;
+  max-width: 2rem;
+  max-height: 2rem;
   transition: 0.5s;
 }
 
@@ -1439,7 +1447,76 @@ footer{
   transform: scale(1.1) translateY(-0.1rem);
 }
 
-/* ------------------------------------------ */
+/* RESPONSIVE ------------------------------------------ */
+
+@media(max-width: 1370px){
+  .s4-info_name{
+    font-size: 1.2rem;
+    padding-right: 0.5rem;
+  }
+}
+
+@media(max-width: 1250px){
+  .s3{
+    padding: 7.5rem 3rem 7.5rem;
+  }
+}
+
+@media(max-width: 1080px){
+  html{
+    font-size: 14px;
+  }
+}
+
+@media(max-width: 980px){
+  html{
+    font-size: 12px;
+  }
+}
+
+@media(max-width: 780px){
+  html{
+    font-size: 10px;
+  }
+}
+
+@media(max-width: 650px){
+  html{
+    font-size: 8px;
+  }
+}
+
+@media(max-width: 500px){
+  html{
+    font-size: 6px;
+  }
+}
+
+@media only screen and (hover: none) and (pointer: coarse){
+  html{
+    font-size: 16px;
+  }
+}
+
+
+/* @media(max-width: 450px){
+  html{
+    font-size: 10px;
+  }
+
+  #s2-mid{
+    flex-direction: column-reverse;
+  }
+  #s2-div_description{
+    padding: 4em 4em;
+  }
+  #s2-description_mid{
+    width: 100%;
+  }
+  #s2-img{
+    width: 100%;
+  }
+} */
 
 
 
