--- a/style.css
+++ b/style.css
@@ -976,16 +976,21 @@ section{
 #s6-div_content{
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: space-around;
 }
 
 #s6-video{
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 60%;
+  width: 80%;
+  height: 90vh;
+}
+
+#s6-video iframe{
+  width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 #s6-navigation{
@@ -994,7 +999,7 @@ section{
   justify-content: center;
   align-items: center;
   width: 15%;
-  height: 100%;
+  height: 90vh;
 }
 
 #s6-navigation li{
@@ -1004,12 +1009,20 @@ section{
   margin: 0.5rem 0;
   border-radius: 10%;
   opacity: 0.7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+}
+
+#s6-navigation li:hover{
+  opacity: 1;
 }
 
 #s6-navigation li img{
   width: 100%;
-  height: auto;
   transition: 0.5s;
+  border-radius: 10%;
 }
 
 #s6-navigation li img:hover{
