--- a/Voting Platform/style_voting_platform.css
+++ b/Voting Platform/style_voting_platform.css
@@ -2,17 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
+@import url('http://fonts.cdnfonts.com/css/soleil');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'soleil',sans-serif;
 }
 
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 :root {
@@ -65,16 +66,25 @@ html{
 /* GENERAL THINGS ----------------------------------------------------------*/
 
 .body{
-    overflow-x: hidden;
 }
 
 section{
+    position: relative;
     width: 100vw;
     height: 100vh;
     display: flex;
-    margin: 0 0 1rem 0;
-    background-color: rgb(243, 243, 243);
+    background-color: transparent;
+    justify-content: center;
 }
+
+
+/* #auth_section,
+#submit_section,
+#vote_section{
+    background-image: url("../media/Background.svg");
+    background-repeat: no-repeat;
+    background-size: 100vw;
+} */
 
 .link{text-decoration: none;}
 .link:link{text-decoration: none; color: white;}
@@ -82,6 +92,15 @@ section{
 .link:hover{
   color: var(--main-color);
   transform: scale(1.1);
+}
+
+.background_img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 /* HEADER -------------------------------------------------------------*/
@@ -99,7 +118,7 @@ section{
     align-items: center;
     justify-content:space-between;
     background: transparent;
-    backdrop-filter: blur(2.5px);
+    backdrop-filter: blur(1.5px);
 }
 
 .logo_div{
@@ -393,29 +412,32 @@ transform: scale(1.15) translateY(-0.15rem);
 /* Footer ----------------------------------------------------------*/
 
 footer{
-    width: 100%;
-    height: min-content;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 3.75rem;
     display: flex;  
-    flex-direction: column;
-    padding: 1rem 2rem 1.5rem;
+    flex-direction: row;
+    align-items: center;
+    justify-content:space-between;
+    padding: 1% 3%;
     background: rgb(20, 20, 20);
     color: white;
 }
 
 .foot-div{
-    width: 100%;
-    height: 33%;
+    width: 50%;
+    height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
-    text-align: center;
+    justify-content: center;
     color: white;
-    padding: 0 0 0rem 0;
 }
 
 .foot-info_socials{
-    width: 30%;
+    width: 40%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -427,11 +449,14 @@ footer{
     width: 20%;
     padding: 2.5%;
     transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .foot-info_socials_img img{
-    width: 3rem;
-    height: 3rem;
+    width: 1.75rem;
+    height: 1.75rem;
 }
 
 .foot-info_socials_img{text-decoration: none;}
@@ -441,21 +466,187 @@ footer{
 transform: scale(1.1) translateY(-0.3rem);
 }
 
+.foot-info_socials{
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 #foot-copyright{
-    padding: 0.5rem 0 0.5rem 0;
+    padding: 0.5rem 0.15rem;
+}
+
+#foot-developedby{
+    padding: 0.5rem 0.15rem;
+}
+
+.foot-div-text{
+    font-size: 0.75rem;
 }
 
 .foot-developedby_link{
     text-decoration: none;
-    margin: 0 1rem;
-    transition: 0.5s;
+    margin: 0 0.1rem;
+    transition: 0.75s;
 }
 
 .foot-developedby_link:link{text-decoration: none; color: rgb(150, 150, 150);}
 .foot-developedby_link:visited{text-decoration: none; color: rgb(150, 150, 150);}
 .foot-developedby_link:hover{
 color: white;
-transform: scale(1.1) translateY(-0.1rem);
+font-size: 0.775rem;
 }
-  
+
+/* auth_section------------------------------------------------------------- */
+
+.auth_section-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.auth_section-div_img{
+    width: 10%;
+    height: auto;
+}
+
+.auth_section-img{
+    width: 100%;
+    height: 100%;
+}
+
+.auth_section-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2rem;
+    padding: 0.8rem 3rem;
+    background-color: rgba(224, 224, 224, 0.6);
+    margin: 1rem;
+}
+
+.auth_section-button p{
+    font-size: 2rem;
+    margin: 0;
+    padding: 0;
+}
+
+.auth_section-paragraf{
+    margin: 0.4rem;  
+}
+
+/* submit_section----------------------------------------------------------- */
+
+#submit_section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.submit_section-container{
+    height: 67.5%;
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.common-div,
+.submit_section-div{
+    width: 50%;
+    height: 100%;
+    margin: 0 1rem;
+}
+
+.common-info,
+.common-last_winner,
+.submit_section-div{
+    border-radius: 1.5rem;
+    background: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(2.5px);
+    padding: 1.5rem 2rem;
+}
+
+.common-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.common-info{
+    text-align: center;
+    margin: 0 0 1rem 0;
+    padding: 1.5rem 2rem;
+}
+
+.common-info h3{
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.common-info p{
+    font-size: 0.7rem;
+    padding: 0.75rem 0 0 0;
+}
+
+.common-last_winner{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem 1.5rem;
+}
+
+.common-last_winner h3{
+    font-size: 1rem;
+    text-align: center;
+}
+
+.common-last_winner_link{
+    height: 70%;
+    display: flex;
+    flex-direction: row;
+    border-radius: 3rem;
+    background-color: black;
+    margin: 0.75rem 0 0 0;
+    padding: 0.1rem;
+}
+
+.common-last_winner_link:link{text-decoration: none; color: white;}
+.common-last_winner_link:visited{text-decoration: none; color: white;}
+.common-last_winner_link:hover{
+color: white;
+}
+
+.common-last_winner_img{
+    height: 100%;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.common-last_winner_img img{
+    height: 3rem;
+    width: 3rem;
+    border-radius: 3rem;
+    padding: 0.1rem;
+}
+
+#last_winner_name{
+    font-size: 1.6rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 0 0 0.6rem;
+}
+
+
+
+
+/* vote_section------------------------------------------------------------- */
   
