--- a/Voting Platform/style_voting_platform.css
+++ b/Voting Platform/style_voting_platform.css
@@ -558,7 +558,7 @@ font-size: 0.775rem;
 .submit_section-div{
     width: 50%;
     height: 100%;
-    margin: 0 1rem;
+    margin: 0 1.25rem;
 }
 
 .common-info,
@@ -597,7 +597,7 @@ font-size: 0.775rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1rem 1.5rem;
+    padding: 1rem 1.5rem 0.5rem;
 }
 
 .common-last_winner h3{
@@ -606,7 +606,7 @@ font-size: 0.775rem;
 }
 
 .common-last_winner_link{
-    height: 70%;
+    height: 3.2rem;
     display: flex;
     flex-direction: row;
     border-radius: 3rem;
@@ -643,6 +643,30 @@ color: white;
     display: flex;
     align-items: center;
     padding: 0 0 0 0.6rem;
+}
+
+.common-last_winner_socials{
+    height: 3rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 1rem 0.5rem 0;
+}
+
+.common-last_winner_socials a{
+    width: 3rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.common-last_winner_socials a img{
+    width: 2rem;
+    height: 2rem;
+    padding: 2.5%;
 }
 
 
