--- a/Voting Platform/style_voting_platform.css
+++ b/Voting Platform/style_voting_platform.css
@@ -150,7 +150,7 @@ section{
     line-height: 1.25rem;
     letter-spacing: 0.075em;
     text-align: center;
-    padding: 0 5rem;
+    padding: 0 14rem;
 }
 
 .nav_bar a{
@@ -511,8 +511,8 @@ footer{
 }
 
 .foot-info_socials_img img{
-    width: 1.75rem;
-    height: 1.75rem;
+    width: 1.4rem;
+    height: 1.4rem;
 }
 
 .foot-info_socials_img{text-decoration: none;}
@@ -898,10 +898,9 @@ transition: 0.5s;
     height: 2rem;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-direction: row;
     margin: 0.4rem 0;
-    padding: 0 0.5rem;
 }
 
 .vote_section-leaderboard_tag_number{
@@ -917,31 +916,29 @@ transition: 0.5s;
     border-radius: 2rem;
     background-color: white;
     margin: 0;
-    padding: 0.1rem;
+    padding: 0 0.2rem;
 }
 
 .vote_section-leaderboard_tag_streamer_img{
-    height: 100%;
-    width: auto;
+    height: 1.8rem;
+    width: 1.8rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .vote_section-leaderboard_tag_streamer_img img{
-    height: 2rem;
-    width: 2rem;
+    height: 100%;
+    width: 100%;
     border-radius: 2rem;
-    padding: 0.1rem;
 }
 
 .vote_section-leaderboard_tag_streamer_name{
     font-size: 1rem;
-    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 0.8rem;
+    margin: 0 1rem;
 }
 
 .vote_section-leaderboard_tag_streamer_plus{
@@ -953,11 +950,16 @@ transition: 0.5s;
 }
 
 .vote_section-leaderboard_tag_streamer_plus button{
-    height: 2rem;
-    width: 2rem;
+    height: 100%;
+    width: 100%;
     border-radius: 3rem;
     border: none;
     background-color: transparent;
+    transition: 0.5s;
+}
+
+.vote_section-leaderboard_tag_streamer_plus button:hover{
+    transform: scale(1.1) translateX(0.1rem);
 }
 
 .vote_section-list{
@@ -971,11 +973,12 @@ transition: 0.5s;
     height: 100%;
     width: 100%;
     overflow-y: auto;
-    padding: 0 0.5rem;
+    padding: 0 0.6rem;
 }
 
 .vote_section-list_tag_streamer{
     height: 1.5rem;
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -983,31 +986,28 @@ transition: 0.5s;
     border-radius: 1.5rem;
     background-color: black;
     margin: 0.2rem 0;
-    padding: 0.1rem;
+    padding: 0 0.3rem;
 }
 
 .vote_section-list_tag_streamer_img{
-    height: 100%;
-    width: auto;
+    height: 1.3rem;
+    width: 1.3rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .vote_section-list_tag_streamer_img img{
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 100%;
+    width: 100%;
     border-radius: 1.5rem;
-    padding: 0.1rem;
 }
 
 .vote_section-list_tag_streamer_name{
     font-size: 0.8rem;
-    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 0.8rem;
     color: white;
 }
 
@@ -1020,9 +1020,14 @@ transition: 0.5s;
 }
 
 .vote_section-list_tag_streamer_plus button{
-    height: 2rem;
-    width: 2rem;
+    height: 100%;
+    width: 100%;
     border-radius: 3rem;
     border: none;
     background-color: transparent;
+    transition: 0.5s;
+}
+
+.vote_section-list_tag_streamer_plus button:hover{
+    transform: scale(1.1) translateX(0.1rem);
 }
