--- a/style.css
+++ b/style.css
@@ -932,6 +932,11 @@ transition: 0.5s;
     justify-content: center;
 }
 
+
+.vote_section-leaderboard_tag_streamer_img:hover, .vote_section-leaderboard_tag_streamer_name:hover, .vote_section-list_tag_streamer_img:hover, .vote_section-list_tag_streamer_name{
+  cursor: pointer;
+}
+
 .vote_section-leaderboard_tag_streamer_socials{
     height: 1.8rem;
     width: 1.8rem;
